Rebased with React

--- a/public/index.html
+++ b/public/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <meta charset="UTF-8" />
-    <title>IRONA Client</title>
+    <title>IRONA</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="client"></div>
+    <script src="./dist/app.js"></script>
   </body>
 </html>
