--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     <title>IRONA</title>
   </head>
   <body>
-    <div id="client"></div>
+    <noscript>
+      <em style="background-color: white; color: black;">Javascript is not enabled. This application uses Javascript, so to use this app you should turn on it.</em>
+    </noscript>
+    <div id="primClient"></div>
     <script src="./dist/app.js"></script>
   </body>
 </html>
