--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
       <em style="background-color: white; color: black;">Javascript is not enabled. This application uses Javascript, so to use this app you should turn on it.</em>
     </noscript>
     <div id="primClient"></div>
-    <script src="./dist/app.js"></script>
+    <script src="./dist/main.js"></script>
   </body>
 </html>
